<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


<!--    textview email-->
    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:layout_marginLeft="20dp"
        android:text="@string/text_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginLeft="8dp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="70dp"
        android:hint="@string/editText_email"
        android:inputType="textLongMessage"
        android:text="@string/editText_email"
        app:layout_constraintBottom_toTopOf="@+id/text_create_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

<!--    textview create_password-->
    <TextView
        android:id="@+id/text_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="20dp"
        android:text="@string/text_create_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_create_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        app:layout_goneMarginLeft="8dp" />

    <EditText
        android:id="@+id/editText_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="86dp"
        android:hint="@string/editText_email"
        android:inputType="textLongMessage"
        android:text="@string/editText_create_password"
        app:layout_constraintBottom_toTopOf="@+id/text_repeat_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_create_password" />

<!--    textview repeat password-->
    <TextView
        android:id="@+id/text_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="20dp"
        android:text="@string/text_repeat_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_repeat_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_create_password"
        app:layout_goneMarginLeft="8dp" />

    <EditText
        android:id="@+id/editText_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="90dp"
        android:hint="@string/editText_email"
        android:inputType="textLongMessage"
        android:text="@string/editText_repeat_password"
        app:layout_constraintBottom_toTopOf="@+id/text_above_button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_repeat_password" />

<!--    textview above button_second-->
    <TextView
        android:id="@+id/text_above_button_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="Your password should have a minimum of 8 characters and contain at least one number, one uppercase, one lowercase. You can use special characters."
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        tools:layout_editor_absoluteX="0dp" />

<!--    button button_second-->
    <Button
        android:id="@+id/button_second"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:onClick="MainActivity"
        android:text="@string/button_second"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>